--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ahmedng.github.io/Ultra-profile",
+  "homepage": "https://ahmedng.github.io/Ultra-profile/",
   "name": "firstapp",
   "version": "0.1.0",
   "private": true,
